k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day-to-us-frontend-svc
  namespace: day-to-us
spec:
  selector:
    app: day-to-us-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
