k8s/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: day-to-us-frontend-route
  namespace: day-to-us
spec:
  parentRefs:
  - name: edge-gw
    namespace: nginx-gateway
  hostnames:
  - "daytous.movingzero.org"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: day-to-us-frontend-svc
      port: 80
